# Orthanc_HelloWorld

./: CMakeLists.txt  README.md  build-linux.sh  salimPlugin.cpp
